backend/devops/kubernetes/homolog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ms-payment-origination
    cloud: azure
    environment: hml
    oi: "600001290"
    journey: nav
    product: nav-servicos
    tier: t0
  name: ms-payment-origination
  namespace: ms-payments-origination
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: ms-payment-origination
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ms-payment-origination
        cloud: azure
        environment: hml
        oi: "600001290"
        journey: nav
        product: nav-servicos
        tier: t0
    spec:
      imagePullSecrets:
        - name: imagesdasa
      containers:
        - name: ms-payment-origination
          image: "${IMAGE_VERSION}"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 45
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 120
            timeoutSeconds: 120
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              memory: "256Mi"
              cpu: "150m"
            limits:
              memory: "512Mi"
              cpu: "600m"
      tolerations:
        - key: "kubernetes.azure.com/scalesetpriority"
          operator: "Equal"
          value: "spot"
          effect: "NoSchedule"        
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ms-payment-origination.azr-hml02.dasaexp.io
    external-dns.alpha.kubernetes.io/ttl: "5"
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  labels:
    applicationRole: app
    createdBy: squad-nav-pagamentos
    environment: hml
    journey: nav
    oi: "600001290"
    product: nav-servicos
    tier: t0
  name: ms-payment-origination-hml-svc
  namespace: ms-payments-origination
spec:
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: ms-payment-origination
    cloud: azure
    environment: hml
    journey: nav
    oi: "600001290"
    product: nav-servicos
    tier: t0
  sessionAffinity: None
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ms-payment-origination-hml-ingress
  namespace: ms-payments-origination
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/load-balance: ewma
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
  labels:
    applicationRole: app
    createdBy: squad-nav-pagamentos
    environment: hml
    journey: nav
    oi: "600001290"
    product: nav-servicos
    tier: t0
spec:
  tls:
    - hosts:
        - ms-payment-origination.azr-hml02.dasaexp.io
      secretName: azr-hml02-ingress-secret-tls
  rules:
    - host: ms-payment-origination.azr-hml02.dasaexp.io
      http:
        paths:
          - path: /
            backend:
              serviceName: ms-payment-origination-hml-svc
              servicePort: 3000
